--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="10">
+    <meta http-equiv="refresh" content="30">
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <style>
@@ -110,6 +110,7 @@
                 var options = {
                     height: 500,
                     title: 'Navitia response time',
+                    titleTextStyle: {fontSize: 25},
                     hAxis: {title: 'Time', titleTextStyle: {color: '#333'}},
                     vAxis: {minValue: responseTimes.min, maxValue: responseTimes.max}
                 };
@@ -125,9 +126,9 @@
 <div id="slideshow">
     <div class="pure-g">
         <div class="pure-u-1-3 blue bloc"><p class="big"><span
-                        class="legende"> Navitia calls: <br/></span>{{ calls | number_format(0, '.', ' ') }}</p>
+                        class="legende"> Navitia hits<br/></span>{{ calls | number_format(0, '.', ' ') }}</p>
         </div>
-        <div class="pure-u-1-3 red bloc"><p class="big"><span class="legende"> Navitia errors: <br/></span>{{ errorsPercent | number_format(6, ',', '')}}  %
+        <div class="pure-u-1-3 green bloc"><p class="big"><span class="legende"> Navitia availability rate<br/></span>{{ errorsPercent | number_format(4, ',', '')}}  %
             </p>
         </div>
         <div class="pure-u-1-3 blue bloc"><p class="big">3 000</p></div>
