split js and css

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -5,121 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="30">
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="{{ asset('css/main.css') }}" />
+    <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <style>
-        h1 {
-            font-family: 'Oswald', sans-serif;
-            font-size: xx-large;
-            color: white;
-            text-align: center;
-        }
-
-        body {
-            background: #2E383B;
-        }
-
-        .red {
-            background: #e74c3c;
-
-        }
-
-        .green {
-            background: forestgreen;
-
-        }
-
-        .blue {
-            background: #3498db;
-            font-size: 128px;
-        }
-
-        .big {
-            font-family: 'Oswald', sans-serif;
-            color: white;
-            text-align: center;
-            font-size: 128px;
-
-        }
-
-        .legende {
-            font-size: 40px;
-            color: white;
-            text-align: center;
-
-        }
-
-        .mobile {
-            background-image: url(https://cdn1.iconfinder.com/data/icons/electronics-19/128/electronics_appliances_device-30-256.png);
-            background-repeat: no-repeat;
-            background-position: center;
-        }
-
-        #chart_div {
-            height: 500px;
-        }
-    </style>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script>
-        $(document).ready(function () {
-//            $("#slideshow > div:gt(0)").hide();
-//
-//            setInterval(function () {
-//                $('#slideshow > div:first')
-//                        .fadeOut(2000)
-//                        .next()
-//                        .fadeIn(2000)
-//                        .end()
-//                        .appendTo('#slideshow');
-//            }, 10000);
-
-            var responseTimes = $('#chart_div').data('responsetime');
-//            $('.counter').each(function () {
-//                var $this = $(this),
-//                        countTo = $this.attr('data-count');
-//
-//                $({countNum: $this.text()}).animate({
-//                            countNum: countTo
-//                        },
-//
-//                        {
-//
-//                            duration: 8000,
-//                            easing: 'linear',
-//                            step: function () {
-//                                $this.text(Math.floor(this.countNum));
-//                            },
-//                            complete: function () {
-//                                $this.text(this.countNum);
-//                                //alert('finished');
-//                            }
-//
-//                        });
-//
-//            });
-            google.charts.load('current', {'packages': ['corechart']});
-            google.charts.setOnLoadCallback(function () {
-                var dataTable = [['Time', 'Response time']];
-                responseTimes = responseTimes["responseTimes"];
-                for (date in responseTimes) {
-                    dataTable.push([date, responseTimes[date]]);
-                }
-                console.dir(dataTable);
-
-                var data = google.visualization.arrayToDataTable(dataTable);
-
-                var options = {
-                    height: 500,
-                    title: 'Navitia response time',
-                    titleTextStyle: {fontSize: 25},
-                    hAxis: {title: 'Time', titleTextStyle: {color: '#333'}},
-                    vAxis: {minValue: responseTimes.min, maxValue: responseTimes.max}
-                };
-
-                var chart = new google.visualization.AreaChart(document.getElementById('chart_div'));
-                chart.draw(data, options);
-            });
-        });
-    </script>
+    <script type="text/javascript" src="{{ asset('js/main.js') }}"></script>
 </head>
 <body>
 <h1>The Final Count Down</h1>
