--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -6,7 +6,7 @@
     <meta http-equiv="refresh" content="30">
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ asset('css/main.css') }}" />
-    <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
+    {#<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />#}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="{{ asset('js/main.js') }}"></script>
@@ -15,21 +15,36 @@
 <h1>The Final Count Down</h1>
 <div id="slideshow">
     <div class="pure-g">
+        {#<div class="pure-u-1-3 blue bloc"><p class="big"><span#}
+                        {#class="legende"> Navitia hits<br/></span>{{ calls | number_format(0, '.', ' ') }}</p>#}
+        {#</div>#}
         <div class="pure-u-1-3 blue bloc"><p class="big"><span
-                        class="legende"> Navitia hits<br/></span>{{ calls | number_format(0, '.', ' ') }}</p>
+        class="legende">{{ activeUsers.name }}<br/></span>{{ activeUsers.value | number_format(0, '.', ' ') }}</p>
         </div>
+        <div class="pure-u-1-3 green bloc"><p class="big"><span
+        class="legende">Daily Navitia hits<br/></span>{{ calls | number_format(0, '.', ' ') }}</p>
+        </div>
+        <div class="pure-u-1-3 blue bloc"><p class="big">3 000</p></div>
         <div class="pure-u-1-3 green bloc"><p class="big"><span class="legende"> Navitia availability rate<br/></span>{{ errorsPercent | number_format(4, ',', '')}}  %
             </p>
         </div>
-        <div class="pure-u-1-3 blue bloc"><p class="big">3 000</p></div>
-        <div class="pure-u-1-3 green bloc"><p class="big"><span
-                        class="legende">Public repositories on Github: <br/></span>{{ reposNumber }}</p></div>
     {#</div>#}
     {#<div class="pure-g">#}
-        <div class="pure-u-1-3 bloc" id="chart_div" data-responsetime='{{ responseTimes }}'></div>
-        <div class="pure-u-1-3 green mobile counter"><p class="big">300 000 </p></div>
+        {#<div class="pure-u-1-3 bloc" id="chart_div" data-responsetime='{{ responseTimes }}'></div>#}
+        <div class="pure-u-1-3 blue bloc"><p class="big"><span
+                        class="legende">Total requests of all time<br/></span>{{ totalCalls | number_format(0, '.', ' ') }}</p>
+        </div>
+        <div class="pure-u-1-3 green bloc">
+            <p class="big"><span class="legende"> Number of today coffees<br/></span>{{ nbCoffeeRealTime }}
+            <p class="big"><span class="legende"> Current meetings<br/></span>{{ occupiedRooms }}</p>
+        </div>
         <br/>
     </div>
 </div>
+<footer class="footer">
+    <img src="https://image-store.slidesharecdn.com/7b72319c-3630-4da3-91b7-2aaf57c997fe-large.png" width="130">
+    <div id="twitter_update_list">
+    </div>
+</footer>
 </body>
 </html>
