--- a/web/css/main.css
+++ b/web/css/main.css
@@ -48,3 +48,11 @@ body {
 #chart_div {
     height: 500px;
 }
+
+.footer {
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    height: 60px;
+    background-color: white;
+}
