--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -132,7 +132,7 @@
         </div>
         <div class="pure-u-1-3 blue bloc"><p class="big">3 000</p></div>
         <div class="pure-u-1-3 green bloc"><p class="big"><span
-                        class="legende">Public repositories on Github: <br/></span>{{ reposNumber }}</p></div>
+                        class="legende">Public repositories on Github: <br/></span>{# {{ reposNumber }} #}</p></div>
     {#</div>#}
     {#<div class="pure-g">#}
         <div class="pure-u-1-3 bloc" id="chart_div" data-responsetime='{{ responseTimes }}'></div>
