--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="30">
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="{{ asset('css/main.css') }}" />
+    <link rel="stylesheet" href="{{ asset('css/main.css') }}"/>
     {#<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />#}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -16,27 +16,38 @@
 <div id="slideshow">
     <div class="pure-g">
         {#<div class="pure-u-1-3 blue bloc"><p class="big"><span#}
-                        {#class="legende"> Navitia hits<br/></span>{{ calls | number_format(0, '.', ' ') }}</p>#}
+        {#class="legende"> Navitia hits<br/></span>{{ calls | number_format(0, '.', ' ') }}</p>#}
         {#</div>#}
         <div class="pure-u-1-3 blue bloc"><p class="big"><span
-        class="legende">{{ activeUsers.name }}<br/></span>{{ activeUsers.value | number_format(0, '.', ' ') }}</p>
+                        class="legende">{{ activeUsers.name }}
+                    <br/></span>{{ activeUsers.value | number_format(0, '.', ' ') }}</p>
         </div>
         <div class="pure-u-1-3 green bloc"><p class="big"><span
-        class="legende">Daily Navitia hits<br/></span>{{ calls | number_format(0, '.', ' ') }}</p>
+                        class="legende">Daily Navitia hits<br/></span>{{ calls | number_format(0, '.', ' ') }}</p>
         </div>
-        <div class="pure-u-1-3 blue bloc"><p class="big">3 000</p></div>
-        <div class="pure-u-1-3 green bloc"><p class="big"><span class="legende"> Navitia availability rate<br/></span>{{ errorsPercent | number_format(4, ',', '')}}  %
+        <div class="pure-u-1-3 blue bloc"><p class="medium">
+                <span class="legende">Downloads<br/><br/></span>
+                IOS: {{ downloads.ios_store | number_format(0, '.', ' ') }} <br/>
+                Android: {{ downloads.google_play | number_format(0, '.', ' ') }}
             </p>
         </div>
-    {#</div>#}
-    {#<div class="pure-g">#}
-        {#<div class="pure-u-1-3 bloc" id="chart_div" data-responsetime='{{ responseTimes }}'></div>#}
-        <div class="pure-u-1-3 blue bloc"><p class="big"><span
-                        class="legende">Total requests of all time<br/></span>{{ totalCalls | number_format(0, '.', ' ') }}</p>
+        <div class="pure-u-1-3 green bloc"><p class="big"><span
+                        class="legende"> Navitia availability rate<br/></span>{{ errorsPercent | number_format(4, ',', '') }}
+                %
+            </p>
         </div>
-        <div class="pure-u-1-3 green bloc">
-            <p class="big"><span class="legende"> Number of today coffees<br/></span>{{ nbCoffeeRealTime }}
-            <p class="big"><span class="legende"> Current meetings<br/></span>{{ occupiedRooms }}</p>
+        {#</div>#}
+        {#<div class="pure-g">#}
+        {#<div class="pure-u-1-3 bloc" id="chart_div" data-responsetime='{{ responseTimes }}'></div>#}
+        <div class="pure-u-1-3 blue bloc"><p class="big">
+                <span class="legende">Total requests of all time<br/></span><span class="middle">{{ totalCalls | number_format(0, '.', ' ') }}</span>
+            </p>
+        </div>
+        <div class="pure-u-1-3 green bloc"><p class="medium">
+                <span class="legende">Today<br/><br/></span>
+                Coffees: {{ nbCoffeeRealTime }} <br/>
+                Current meetings: {{ occupiedRooms }}
+            </p>
         </div>
         <br/>
     </div>
