--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,61 +1,67 @@
-<html>
-<head>
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="30">
-    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="{{ asset('css/main.css') }}"/>
-    {#<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />#}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript" src="{{ asset('js/main.js') }}"></script>
-</head>
-<body>
-<h1>The Final Count Down</h1>
-<div id="slideshow">
-    <div class="pure-g">
-        {#<div class="pure-u-1-3 blue bloc"><p class="big"><span#}
-        {#class="legende"> Navitia hits<br/></span>{{ calls | number_format(0, '.', ' ') }}</p>#}
-        {#</div>#}
-        <div class="pure-u-1-3 blue bloc"><p class="big"><span
-                        class="legende">{{ activeUsers.name }}
-                    <br/></span>{{ activeUsers.value | number_format(0, '.', ' ') }}</p>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <link rel="stylesheet" href="http://www.yoan.eu/kisiowall/grid/css/bootstrap.min.css">
+        <title>The Final Count Down</title>
+        <link href="./The Final Count Down_files/style.css" rel="stylesheet" type="text/css">
+        <script src="./The Final Count Down_files/jquery.min.js"></script>
+         <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    	<link rel="stylesheet" href="{{ asset('css/main.css') }}"/>
+    </head>
+    <body>
+        <div class="container-fluid squares">
+           <div></div>
+
+            <div class="col-sm-4 height-3">
+                <div class="grids red">
+					<h1>{{ activeUsers.value | number_format(0, '.', ' ') }}</h1>
+					<p>{{ activeUsers.name }}</p>
+                </div>
+            </div>
+
+            <div class="col-sm-4 height-3">
+                <div class="grids blue">
+                	<h1>{{ calls | number_format(0, '.', ' ') }}</h1>
+                    <p>Daily Navitia hits</p>
+                </div>
+            </div>
+            
+            <div class="col-sm-4 height-3">
+                <div class="grids blue">
+                	<p>Downloads:</p><br/>
+                	<h1>{{ downloads.ios_store | number_format(0, '.', ' ') }}</h1>
+                	<h2>on IOS</h2><br/>
+                	<h1>{{ downloads.google_play | number_format(0, '.', ' ') }}</h1>
+                	<h2>on Android</h2>
+                </div>
+            </div>
+
+            <div class="col-sm-4 height-3">
+                <div class="grids blue">
+                	<h1>{{ errorsPercent | number_format(4, ',', '') }}</h1>
+                    <p>Navitia availability rate</p>
+                </div>
+            </div>
+        
+        	<div class="col-sm-4 height-3">
+                <div class="grids blue">
+                	<h1>{{ totalCalls | number_format(0, '.', ' ') }}</h1>
+                    <p>Total requests of all time</p>
+                </div>
+            </div>
+        
+        	<div class="col-sm-4 height-3">
+                <div class="grids blue">
+                </div>
+            </div>
         </div>
-        <div class="pure-u-1-3 green bloc"><p class="big"><span
-                        class="legende">Daily Navitia hits<br/></span>{{ calls | number_format(0, '.', ' ') }}</p>
-        </div>
-        <div class="pure-u-1-3 blue bloc"><p class="medium">
-                <span class="legende">Downloads<br/><br/></span>
-                IOS: {{ downloads.ios_store | number_format(0, '.', ' ') }} <br/>
-                Android: {{ downloads.google_play | number_format(0, '.', ' ') }}
-            </p>
-        </div>
-        <div class="pure-u-1-3 green bloc"><p class="big"><span
-                        class="legende"> Navitia availability rate<br/></span>{{ errorsPercent | number_format(4, ',', '') }}
-                %
-            </p>
-        </div>
-        {#</div>#}
-        {#<div class="pure-g">#}
-        {#<div class="pure-u-1-3 bloc" id="chart_div" data-responsetime='{{ responseTimes }}'></div>#}
-        <div class="pure-u-1-3 blue bloc"><p class="big">
-                <span class="legende">Total requests of all time<br/></span><span class="middle">{{ totalCalls | number_format(0, '.', ' ') }}</span>
-            </p>
-        </div>
-        <div class="pure-u-1-3 green bloc"><p class="medium">
-                <span class="legende">Today<br/><br/></span>
-                Coffees: {{ nbCoffeeRealTime }} <br/>
-                Current meetings: {{ occupiedRooms }}
-            </p>
-        </div>
-        <br/>
-    </div>
-</div>
-<footer class="footer">
-    <img src="https://image-store.slidesharecdn.com/7b72319c-3630-4da3-91b7-2aaf57c997fe-large.png" width="130">
-    <div id="twitter_update_list">
-    </div>
-</footer>
-</body>
+        <footer style="position: fixed; bottom: 0px; width: 100%; height: 60px; background-color: white;">
+            <img src="https://image-store.slidesharecdn.com/7b72319c-3630-4da3-91b7-2aaf57c997fe-large.png" width="130">
+    		<div id="twitter_update_list">
+            </div>
+        </footer>
+    </body>
 </html>
