--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,71 +1,143 @@
-h1 {
-    font-family: 'Oswald', sans-serif;
-    font-size: xx-large;
-    color: white;
-    text-align: center;
+.red{
+background :#e74c3c;
+        }
+        .blue{
+          background :#3498db;
+        }
+        .gris{
+          background:#bdc3c7;
+        }
+        .white{
+          background:white
+        }
+        body{
+          font-family: 'Oswald', sans-serif;
+        }
+        .grids {
+          height: 100%;
+          width: 100%;
+          display: flex; /* contexte sur le parent */
+flex-direction: column; /* direction d'affichage verticale */
+justify-content: center; /* alignement vertical */
+  align-items: center;
+  justify-content: center;
+  padding-left: 15px;
+  padding-right: 15px;
+  text-align:center;
 }
+@media(max-width: 480px) {
+  .grids {
+    padding-top: 15px;
+    padding-bottom: 15px; } }
+.height-1 {
+  height: calc(100vw / 12 * 1 - 45px); }
+
+.height-2 {
+  height: calc(100vw / 12 * 2 - 45px); }
+
+.height-3 {
+  height: calc(100vw / 12 * 3 - 45px); }
+
+.height-4 {
+  height: calc(100vw / 12 * 4 - 45px); }
+
+.height-5 {
+  height: calc(100vw / 12 * 5 - 45px); }
+
+.height-6 {
+  height: calc(100vw / 12 * 6 - 45px); }
+
+.height-7 {
+  height: calc(100vw / 12 * 7 - 45px); }
+
+.height-8 {
+  height: calc(100vw / 12 * 8 - 45px); }
+
+.height-9 {
+  height: calc(100vw / 12 * 9 - 45px); }
+
+.height-10 {
+  height: calc(100vw / 12 * 10 - 45px); }
+
+.height-11 {
+  height: calc(100vw / 12 * 11 - 45px); }
+
+.height-12 {
+  height: calc(100vw - 45px); }
+
+.squares {
+  padding-bottom: 30px; }
+
+.squares > div {
+  margin-top: 30px; }
+  .squares > div:first-child {
+    margin-top: 0; }
+@media(max-width: 480px) {
+  .squares > div {
+    height: auto; } }
+.squares > div > div {
+  margin-top: 30px; }
+@media(max-width: 480px) {
+  .squares > div > div {
+    height: auto; } }
+.no-pad {
+  padding-left: 0;
+  padding-right: 0; }
+
+body, html, h1, h2, h3, h4, h5, p {
+  margin: 0; }
 
 body {
-    background: #2E383B;
+  background: #2E383B; }
+
+h1, h2 {
+  font-family: "Oswald";
+  color: white; }
+
+h1 {
+  font-size: 80px; }
+
+h2 {
+  font-size:30px; }
+
+p {
+  font-family: "Oswald";
+  font-size: 50px;
+  color: white; }
+
+.grids {
+
+  
+.heading {
+  justify-content: flex-start;
+  }
+  .heading h1 {
+    letter-spacing: 2px;
+    font-weight: 400;
+    }
+@media(max-width: 480px) {
+  .heading h1 {
+    line-height: 5vh; } }
+.bottom {
+  margin-bottom: 30px; }
+
+.download div {
+  transition: all 1s ease; }
+/*.download:hover div {
+  background: #3498db; }
+  .download:hover div h1 {
+    color: white; */}
+    big{
+  font-family: 'Oswald', sans-serif;
+  color:white;
+  text-align: center;
+  font-size:128px;
 }
 
-.red {
-    background: #e74c3c;
 
-}
+.mobile{
 
-.green {
-    background: forestgreen;
-
-}
-
-.blue {
-    background: #3498db;
-    font-size: 128px;
-}
-
-.big {
-    font-family: 'Oswald', sans-serif;
-    color: white;
-    text-align: center;
-    font-size: 128px;
-}
-
-.medium {
-    font-family: 'Oswald', sans-serif;
-    color: white;
-    text-align: center;
-    font-size: 64px;
-}
-
-.middle {
-    font-family: 'Oswald', sans-serif;
-    color: white;
-    text-align: center;
-    font-size: 90px;
-}
-
-.legende {
-    font-size: 40px;
-    color: white;
-    text-align: center;
-
-}
-
-.mobile {
-    background-image: url(https://cdn1.iconfinder.com/data/icons/electronics-19/128/electronics_appliances_device-30-256.png);
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-#chart_div {
-    height: 500px;
-}
-
-.footer {
-    position: fixed;
-    bottom: 0px;
-    width: 100%;
-    height: 60px;
-    background-color: white;
+  background-image: url(https://cdn1.iconfinder.com/data/icons/electronics-19/128/electronics_appliances_device-30-256.png);
+  background-repeat: no-repeat;
+  background-position: center;
 }
