--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -10,51 +10,52 @@
          <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     	<link rel="stylesheet" href="{{ asset('css/main.css') }}"/>
+		<script src="https://use.fontawesome.com/05c65f012c.js"></script>
     </head>
     <body>
         <div class="container-fluid squares">
            <div></div>
 
             <div class="col-sm-4 height-3">
-                <div class="grids red">
+                <div class="grids" style="background-color: #eb3750">
 					<h1>{{ activeUsers.value | number_format(0, '.', ' ') }}</h1>
-					<p>{{ activeUsers.name }}</p>
+					<p>Current visitors</p>
                 </div>
             </div>
 
             <div class="col-sm-4 height-3">
-                <div class="grids blue">
+                <div class="grids" style="background-color: #001e5a">
+                	<img src="{{ asset('images/logo_navitia-1.png') }}" width=150px/>
                 	<h1>{{ calls | number_format(0, '.', ' ') }}</h1>
                     <p>Daily Navitia hits</p>
                 </div>
             </div>
             
             <div class="col-sm-4 height-3">
-                <div class="grids blue">
-                	<p>Downloads:</p><br/>
-                	<h1>{{ downloads.ios_store | number_format(0, '.', ' ') }}</h1>
-                	<h2>on IOS</h2><br/>
-                	<h1>{{ downloads.google_play | number_format(0, '.', ' ') }}</h1>
-                	<h2>on Android</h2>
+                <div class="grids" style="background-color: #e75e71">
+                	<h1>{{ (downloads.ios_store + downloads.google_play) | number_format(0, '.', ' ') }}</h1>
+                	<p>Total app downloads</p><br/>
+                	<h2><i class="fa fa-apple" aria-hidden="true"></i>    {{ downloads.ios_store | number_format(0, '.', ' ') }}</h2><br/>
+                	<h2><i class="fa fa-android" aria-hidden="true"></i>    {{ downloads.google_play | number_format(0, '.', ' ') }}</h2>
                 </div>
             </div>
 
             <div class="col-sm-4 height-3">
-                <div class="grids blue">
-                	<h1>{{ errorsPercent | number_format(4, ',', '') }}</h1>
+                <div class="grids" style="background-color: #0036a1">
+                	<h1>{{ errorsPercent | number_format(4, ',', '') }}%</h1>
                     <p>Navitia availability rate</p>
                 </div>
             </div>
         
         	<div class="col-sm-4 height-3">
-                <div class="grids blue">
+                <div class="grids" style="background-color: #001e5a">
                 	<h1>{{ totalCalls | number_format(0, '.', ' ') }}</h1>
-                    <p>Total requests of all time</p>
+                    <p>Total Navitia hits of all time</p>
                 </div>
             </div>
         
         	<div class="col-sm-4 height-3">
-                <div class="grids blue">
+                <div class="grids" style="background-color: #0036a1">
                 </div>
             </div>
         </div>
