update template tech

--- a/app/Resources/views/default/tech.html.twig
+++ b/app/Resources/views/default/tech.html.twig
@@ -17,44 +17,46 @@
     <div></div>
 
     <div class="col-sm-4 height-3">
-        <div class="grids blue">
-            <p>Repositories on Github</p>
+        <div class="grids" style="background-color: #ea0828">
             <h1>{{ reposStats.nbRepos }}</h1>
+            <p>Repositories on Github</p>
         </div>
     </div>
 
     <div class="col-sm-4 height-3">
-        <div class="grids blue">
-            <p>Pull requests opened</p>
+        <div class="grids" style="background-color: #001e5a">
             <h1>{{ reposStats.nbPulls.open }}</h1>
+            <p>Pull requests opened</p>
         </div>
     </div>
 
     <div class="col-sm-4 height-3">
-        <div class="grids blue">
-            <p>Today coffees</p>
+        <div class="grids" style="background-color: #e75e71">
             <h1>{{ nbCoffeeRealTime }}</h1>
+            <p>Today coffees</p>
+            <h1>0</h1>
+            <p>Boîte à bruits hits</p>
         </div>
     </div>
 
     <div class="col-sm-4 height-3">
-        <div class="grids blue">
-            <p>Current meetings</p>
+        <div class="grids" style="background-color: #eb3750">
             <h1>{{ occupiedRooms }}</h1>
+            <p>Current meetings</p>
         </div>
     </div>
 
     <div class="col-sm-4 height-3">
-        <div class="grids blue">
-            <p>Pull requests of all time</p>
+        <div class="grids" style="background-color: #001e5a">
             <h1>{{ reposStats.nbPulls.open + reposStats.nbPulls.closed }}</h1>
+            <p>Pull requests of all time</p>
         </div>
     </div>
 
     <div class="col-sm-4 height-3">
-        <div class="grids blue">
-            <p>Daily Pascal Rhod hits</p>
+        <div class="grids" style="background-color: #ea0828">
             <h1>1614</h1>
+            <p>Daily Pascal Rhod hits</p>
         </div>
     </div>
 </div>
