--- a/app/Resources/views/default/tech.html.twig
+++ b/app/Resources/views/default/tech.html.twig
@@ -17,7 +17,7 @@
     <div></div>
 
     <div class="col-sm-4 height-3">
-        <div class="grids" style="background-color: #ea0828">
+        <div class="grids" style="background-color: #e75e71">
             <h1>{{ reposStats.nbRepos }}</h1>
             <p>Repositories on Github</p>
         </div>
@@ -54,7 +54,7 @@
     </div>
 
     <div class="col-sm-4 height-3">
-        <div class="grids" style="background-color: #ea0828">
+        <div class="grids" style="background-color: #eb3750">
             <h1>1614</h1>
             <p>Daily Pascal Rhod hits</p>
         </div>
