--- a/app/Resources/views/default/tech.html.twig
+++ b/app/Resources/views/default/tech.html.twig
@@ -18,6 +18,7 @@
 
     <div class="col-sm-4 height-3">
         <div class="grids" style="background-color: #ea0828">
+        	<i class="fa fa-github" aria-hidden="true"></i>
             <h1>{{ reposStats.nbRepos }}</h1>
             <p>Repositories on Github</p>
         </div>
