--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -24,7 +24,7 @@
             </div>
 
             <div class="col-sm-4 height-3">
-                <div class="grids" style="background-color: #001e5a">
+                <div class="grids" style="background-color: #4C6672">
                 	<img src="{{ asset('images/logo_navitia-1.png') }}" width=150px/>
                 	<h1>{{ calls | number_format(0, '.', ' ') }}</h1>
                     <p>Daily Navitia hits</p>
@@ -41,14 +41,14 @@
             </div>
 
             <div class="col-sm-4 height-3">
-                <div class="grids" style="background-color: #0036a1">
+                <div class="grids" style="background-color: #B3C93B">
                 	<h1>{{ errorsPercent | number_format(4, ',', '') }}%</h1>
                     <p>Navitia availability rate</p>
                 </div>
             </div>
         
         	<div class="col-sm-4 height-3">
-                <div class="grids" style="background-color: #001e5a">
+                <div class="grids" style="background-color: #4C6672">
                 	<h1>{{ totalCalls | number_format(0, '.', ' ') }}</h1>
                     <p>Total Navitia hits of all time</p>
                 </div>
