--- a/app/Resources/views/default/tech.html.twig
+++ b/app/Resources/views/default/tech.html.twig
@@ -11,6 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <link rel="stylesheet" href="{{ asset('css/main.css') }}"/>
+    <script src="https://use.fontawesome.com/05c65f012c.js"></script>
 </head>
 <body>
 <div class="container-fluid squares">
@@ -24,7 +25,7 @@
     </div>
 
     <div class="col-sm-4 height-3">
-        <div class="grids" style="background-color: #001e5a">
+        <div class="grids" style="background-color: #4C6672">
             <h1>{{ reposStats.nbPulls.open }}</h1>
             <p>Pull requests opened</p>
         </div>
@@ -47,15 +48,16 @@
     </div>
 
     <div class="col-sm-4 height-3">
-        <div class="grids" style="background-color: #001e5a">
-            <h1>{{ reposStats.nbPulls.open + reposStats.nbPulls.closed }}</h1>
+        <div class="grids" style="background-color: #4C6672">
+            <h1>{{ (reposStats.nbPulls.open + reposStats.nbPulls.closed) | number_format(0, '.', ' ') }}</h1>
             <p>Pull requests of all time</p>
         </div>
     </div>
 
     <div class="col-sm-4 height-3">
         <div class="grids" style="background-color: #eb3750">
-            <h1>1614</h1>
+            <h1><i class="fa fa-question" aria-hidden="true"></i></h1>
+            <h1>{{ nbPascalHits | number_format(0, '.', ' ')  }}</h1>
             <p>Daily Pascal Rhod hits</p>
         </div>
     </div>
