--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -11,6 +11,17 @@
     	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     	<link rel="stylesheet" href="{{ asset('css/main.css') }}"/>
 		<script src="https://use.fontawesome.com/05c65f012c.js"></script>
+
+        <script type="text/javascript">
+            $(function(){
+                setInterval(function(){
+                    $(".slideshow ul").animate({marginLeft:-1500},2000,function(){
+                        $(this).css({marginLeft:0}).find("li:last").after($(this).find("li:first"));
+                    })
+                }, 4000);
+            });
+        </script>
+
     </head>
     <body>
         <div class="container-fluid squares">
@@ -41,7 +52,7 @@
             </div>
 
             <div class="col-sm-4 height-3">
-                <div class="grids" style="background-color: #B3C93B">
+                <div class="grids" style="background-color: #4C6672">
                 	<h1>{{ errorsPercent | number_format(4, ',', '') }}%</h1>
                     <p>Navitia availability rate</p>
                 </div>
@@ -55,13 +66,30 @@
             </div>
         
         	<div class="col-sm-4 height-3">
-                <div class="grids" style="background-color: #0036a1">
+                <div class="grids" style="background-color: #eb3750">
+                    <h1><i class="fa fa-database" aria-hidden="true"></i></h1>
+                    <p>
+                        {{ dataUpdate.value }}
+                        weekly data updates
+                    </p>
+                    <br/>
+                    <br/>
+                    <p>
+                        {{ regions.value }}
+                        total networks
+                    </p>
                 </div>
             </div>
         </div>
+
         <footer style="position: fixed; bottom: 0px; width: 100%; height: 60px; background-color: white;">
-            <img src="https://image-store.slidesharecdn.com/7b72319c-3630-4da3-91b7-2aaf57c997fe-large.png" width="130">
-    		<div id="twitter_update_list">
+            <img src="https://image-store.slidesharecdn.com/7b72319c-3630-4da3-91b7-2aaf57c997fe-large.png" width="130" style="float:left">
+    		<div id="twitter_update_list" class="slideshow" style="width:1700px; float:left">
+                <ul>
+                {% for tweet in tweets %}
+                    <li>{{ tweet }}</li>
+                {% endfor %}
+                </ul>
             </div>
         </footer>
     </body>
