--- a/app/Resources/views/default/tech.html.twig
+++ b/app/Resources/views/default/tech.html.twig
@@ -12,6 +12,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <link rel="stylesheet" href="{{ asset('css/main.css') }}"/>
     <script src="https://use.fontawesome.com/05c65f012c.js"></script>
+    <script type="text/javascript">
+        $(function(){
+            setInterval(function(){
+                $(".slideshow ul").animate({marginLeft:-1500},2000,function(){
+                    $(this).css({marginLeft:0}).find("li:last").after($(this).find("li:first"));
+                })
+            }, 4000);
+        });
+    </script>
 </head>
 <body>
 <div class="container-fluid squares">
@@ -19,6 +28,7 @@
 
     <div class="col-sm-4 height-3">
         <div class="grids" style="background-color: #e75e71">
+            <h1><i class="fa fa-github" aria-hidden="true"></i></h1>
             <h1>{{ reposStats.nbRepos }}</h1>
             <p>Repositories on Github</p>
         </div>
@@ -26,6 +36,7 @@
 
     <div class="col-sm-4 height-3">
         <div class="grids" style="background-color: #4C6672">
+            <h1><i class="fa fa-github" aria-hidden="true"></i></h1>
             <h1>{{ reposStats.nbPulls.open }}</h1>
             <p>Pull requests opened</p>
         </div>
@@ -33,10 +44,13 @@
 
     <div class="col-sm-4 height-3">
         <div class="grids" style="background-color: #e75e71">
-            <h1>{{ nbCoffeeRealTime }}</h1>
-            <p>Today coffees</p>
-            <h1>0</h1>
-            <p>Boîte à bruits hits</p>
+            <p>
+                <i class="fa fa-coffee" aria-hidden="true"></i>
+                {{ nbCoffeeRealTime }} today
+            </p>
+            <br/>
+            <br/>
+            <p>0 Boîte à bruits hits</p>
         </div>
     </div>
 
@@ -49,6 +63,7 @@
 
     <div class="col-sm-4 height-3">
         <div class="grids" style="background-color: #4C6672">
+            <h1><i class="fa fa-github" aria-hidden="true"></i></h1>
             <h1>{{ (reposStats.nbPulls.open + reposStats.nbPulls.closed) | number_format(0, '.', ' ') }}</h1>
             <p>Pull requests of all time</p>
         </div>
@@ -56,15 +71,20 @@
 
     <div class="col-sm-4 height-3">
         <div class="grids" style="background-color: #eb3750">
-            <h1><i class="fa fa-question" aria-hidden="true"></i></h1>
+            <h1><i style="font-size: 120px" class="fa fa-question" aria-hidden="true"></i></h1>
             <h1>{{ nbPascalHits | number_format(0, '.', ' ')  }}</h1>
             <p>Daily Pascal Rhod hits</p>
         </div>
     </div>
 </div>
 <footer style="position: fixed; bottom: 0px; width: 100%; height: 60px; background-color: white;">
-    <img src="https://image-store.slidesharecdn.com/7b72319c-3630-4da3-91b7-2aaf57c997fe-large.png" width="130">
-    <div id="twitter_update_list">
+    <img src="https://image-store.slidesharecdn.com/7b72319c-3630-4da3-91b7-2aaf57c997fe-large.png" width="130" style="float:left">
+    <div id="twitter_update_list" class="slideshow" style="width:1700px; float:left">
+        <ul>
+            {% for tweet in tweets %}
+                <li>{{ tweet }}</li>
+            {% endfor %}
+        </ul>
     </div>
 </footer>
 </body>
